src/test/ui/associated-types/hr-associated-type-bound-2.stderr
error[E0277]: the trait bound `str: Clone` is not satisfied
  --> $DIR/hr-associated-type-bound-2.rs:11:1
   |
LL | / impl X<'_> for u32
LL | | where
LL | |     for<'b> <Self as X<'b>>::U: Clone,
LL | | {
LL | |     type U = str;
LL | | }
   | |_^ the trait `Clone` is not implemented for `str`
   |
note: required because of the requirements on the impl of `for<'b> X<'b>` for `u32`
  --> $DIR/hr-associated-type-bound-2.rs:11:6
   |
LL | impl X<'_> for u32
   |      ^^^^^     ^^^

error[E0277]: the trait bound `str: Clone` is not satisfied
  --> $DIR/hr-associated-type-bound-2.rs:11:6
   |
LL | impl X<'_> for u32
   |      ^^^^^ the trait `Clone` is not implemented for `str`
   |
note: required because of the requirements on the impl of `for<'b> X<'b>` for `u32`
  --> $DIR/hr-associated-type-bound-2.rs:11:6
   |
LL | impl X<'_> for u32
   |      ^^^^^     ^^^

error[E0277]: the trait bound `str: Clone` is not satisfied
  --> $DIR/hr-associated-type-bound-2.rs:15:14
   |
LL |     type U = str;
   |              ^^^ the trait `Clone` is not implemented for `str`
   |
note: required by a bound in `X`
  --> $DIR/hr-associated-type-bound-2.rs:3:33
   |
LL | trait X<'a>
   |       - required by a bound in this
LL | where
LL |     for<'b> <Self as X<'b>>::U: Clone,
   |                                 ^^^^^ required by this bound in `X`

error[E0277]: the trait bound `str: Clone` is not satisfied
  --> $DIR/hr-associated-type-bound-2.rs:11:1
   |
LL | / impl X<'_> for u32
LL | | where
LL | |     for<'b> <Self as X<'b>>::U: Clone,
LL | | {
LL | |     type U = str;
LL | | }
   | |_^ the trait `Clone` is not implemented for `str`
   |
note: required because of the requirements on the impl of `for<'b> X<'b>` for `u32`
  --> $DIR/hr-associated-type-bound-2.rs:11:6
   |
LL | impl X<'_> for u32
   |      ^^^^^     ^^^

error[E0277]: the trait bound `str: Clone` is not satisfied
  --> $DIR/hr-associated-type-bound-2.rs:13:33
   |
LL |     for<'b> <Self as X<'b>>::U: Clone,
   |                                 ^^^^^ the trait `Clone` is not implemented for `str`
   |
note: required by a bound in `Clone`
  --> $SRC_DIR/core/src/clone.rs:LL:COL
   |
LL | pub trait Clone: Sized {
   | ^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `Clone`

error[E0277]: the trait bound `str: Clone` is not satisfied
  --> $DIR/hr-associated-type-bound-2.rs:15:5
   |
LL |     type U = str;
   |     ^^^^^^^^^^^^^ the trait `Clone` is not implemented for `str`
   |
note: required because of the requirements on the impl of `for<'b> X<'b>` for `u32`
  --> $DIR/hr-associated-type-bound-2.rs:11:6
   |
LL | impl X<'_> for u32
   |      ^^^^^     ^^^

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0277`.
